# motis-test

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  TODO.md  pnpm-lock.yaml
.github/workflows/: ci.yml
Scripts/: docs-list-local.mjs
cmake/: buildcache.cmake
docs/: PORTABLE_APP.md  README.md  RELEASING.md  ROADMAP.md  STYLE.md  TODO.md  elevation-setup.md  linux-dev-setup.md  scripting.md
docs/decisions/: localhost-mode-deprecation.md
gui/: README.md
gui-svelte/: README.md  build-usb.sh
gui-svelte/src-tauri/: Cargo.toml  tauri.conf.json
gui-svelte/src-tauri/src/: main.rs  native.rs  protocol.rs
gui/src-tauri/: Cargo.toml
gui/src-tauri/src/: main.rs  native.rs
include/motis/odm/: shorten.h
native/: CMakeLists.txt  api.cc  api.h  example.cc  example_ipc.cc
scripts/: committer
src/: adr_extend_tt.cc  server.cc
src/gbfs/: geofencing.cc  parser.cc
src/odm/: mixer.cc  shorten.cc
ui/: vite.config.ts
ui/api/openapi/: schemas.gen.ts  types.gen.ts
ui/src/lib/: AddressTypeahead.svelte  AdvancedOptions.svelte  Debug.svelte  IsochronesMask.svelte  RailViz.svelte  SearchMask.svelte  StopTimes.svelte  ViaStopOptions.svelte  debugPlanImport.test.ts  debugPlanImport.ts
ui/src/lib/map/: Drawer.svelte  GeoJSON.svelte
ui/src/routes/: +layout.svelte  +page.svelte
usb-bundle/: README.txt
