[package]
name = "motis-gui-svelte"
version = "0.1.0"
description = "MOTIS Transit GUI - Svelte Edition"
authors = ["MOTIS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.0"

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
urlencoding = "2.1"
base64 = "0.22"
chrono = "0.4"
flate2 = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,-rpath,$ORIGIN/lib"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-rpath,@executable_path/lib"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-rpath,@executable_path/lib"]

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=-crt-static", "-C", "link-arg=-static"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"
