[package]
name = "motis-gui"
version = "0.1.0"
description = "MOTIS Transit GUI - Portable USB Edition"
authors = ["MOTIS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.0"

# No build dependencies needed - we use subprocess IPC instead of FFI

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.dev]
opt-level = 0

# Release profile optimized for portability and static linking
[profile.release]
opt-level = 3
strip = true          # Strip symbols for smaller binary
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better LTO
panic = "abort"       # Smaller binary, no unwinding

# Windows: Static CRT linking
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

# Linux: Static linking preferences
# Note: Full static linking on Linux requires musl target
# For glibc, we link statically what we can
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,-rpath,$ORIGIN/lib"]

# macOS: Default dynamic linking (static linking limited on macOS)
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-rpath,@executable_path/lib"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-rpath,@executable_path/lib"]

# Optional: Fully static Linux build with musl
# Use: cargo build --release --target x86_64-unknown-linux-musl
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=-crt-static", "-C", "link-arg=-static"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
